--- a/archimedes/archimedes.tex
+++ b/archimedes/archimedes.tex
@@ -17,8 +17,7 @@
 
 %\maketitle
 
-\input{./doc/genrel}
-%\input{./doc/tensrep}
+\input{./doc/archimedes}
 
 \bibliographystyle{aipnum4-1}
 \bibliography{./doc/references}
