--- a/diffgeo/sty/artmath.sty
+++ b/diffgeo/sty/artmath.sty
@@ -13,6 +13,8 @@
 \providecommand*{\fdef}[3]{{#1}:{#2}\to{#3}}  % function definition
 \providecommand*{\fmap}[2]{{#1}\mapsto{#2}}   % function mapping
 %
+\providecommand*{\fdmap}[3]{{#1}:{#2}\mapsto{#3}}  % function definition and mapping
+%
 \providecommand*{\setprod}{\times} % set (Cartesian) product
 %
 % special sets
